some refactoring - move a lot of the new crap in the home view to functions in a new utils.py file.

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
     {% if filebrowse_files %}
       {% for filebrowse_file in filebrowse_files %}
         <div class="filebrowse-image{{ loop.cycle('', '', '', ' filebrowse-image-right') }}">
-          <label for="filebrowse_image_{{ filebrowse_file.filename }}"><img src="{{ url_for('thumb', file=filebrowse_file.fullname, width=resize_width, height=resize_height) }}" width="{{ filebrowse_file.width }}" height="{{ filebrowse_file.height }}"{% if filebrowse_file.top_offset %} style="top: {{ filebrowse_file.top_offset }}px"{% endif %}{% if filebrowse_file.left_offset %} style="left: {{ filebrowse_file.left_offset }}px"{% endif %} /></label>
+          <label for="filebrowse_image_{{ filebrowse_file.filename }}"><img src="{{ url_for('thumb', file=filebrowse_file.fullname, width=thumb_resize_width, height=thumb_resize_height) }}" width="{{ filebrowse_file.thumb_width }}" height="{{ filebrowse_file.thumb_height }}"{% if filebrowse_file.top_offset %} style="top: {{ filebrowse_file.top_offset }}px"{% endif %}{% if filebrowse_file.left_offset %} style="left: {{ filebrowse_file.left_offset }}px"{% endif %} /></label>
           <input type="checkbox" id="filebrowse_image_{{ filebrowse_file.filename }}" value="{{ filebrowse_file.filename }}" name="filebrowse_files" checked="checked" />
         </div><!-- /.filebrowse-image -->
       {% endfor %}
