--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base_site.html' %}
 
+{% block extra_js %}<script type="text/javascript" src="{{ url_for('static', filename='js/fotojazz.js') }}"></script>{% endblock extra_js %}
+
 {% block main %}
 <form action="/" method="post">
 <div id="filebrowse" class="grid_6">
@@ -15,7 +17,7 @@
     {% for filebrowse_file in filebrowse_files %}
       <div class="filebrowse-image{{ loop.cycle('', '', '', ' filebrowse-image-right') }}">
         <label for="filebrowse_image_{{ filebrowse_file.filename }}"><img src="{{ url_for('thumb', file=filebrowse_file.fullname, width=thumb_resize_width, height=thumb_resize_height) }}" width="{{ filebrowse_file.thumb_width }}" height="{{ filebrowse_file.thumb_height }}"{% if filebrowse_file.top_offset %} style="top: {{ filebrowse_file.top_offset }}px"{% endif %}{% if filebrowse_file.left_offset %} style="left: {{ filebrowse_file.left_offset }}px"{% endif %} /></label>
-        <input type="checkbox" id="filebrowse_image_{{ filebrowse_file.filename }}" value="{{ filebrowse_file.filename }}" name="filebrowse_files" checked="checked" />
+        <input type="checkbox" id="filebrowse_image_{{ filebrowse_file.filename }}" value="{{ filebrowse_file.filename }}" name="filebrowse_files" checked="checked" class="filebrowse-checkbox" />
       </div><!-- /.filebrowse-image -->
     {% endfor %}
     
@@ -26,7 +28,7 @@
 
 <div id="operations" class="grid_6">
   <div class="operation">
-    <input type="submit" value="Fix orientation" />
+    <input type="submit" value="Fix orientation" id="operation-reorient" />
   </div><!-- /#operation -->
 </div><!-- /#operations -->
 </form>
