yay - ajax progress working for reorientation process.

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,6 +28,7 @@
 
 <div id="operations" class="grid_6">
   <div class="operation">
+    <div class="operation-progress" id="operation-reorient-progress"></div>
     <input type="submit" value="Fix orientation" id="operation-reorient" />
   </div><!-- /#operation -->
 </div><!-- /#operations -->
