--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -15,6 +15,17 @@ input[type=text] {
   border: 1px solid #636363;
   padding: 5px;
 }
+input[type=submit] {
+  padding: 10px;
+  color: #636363;
+  background-color: #ccc;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+input[type=submit]:hover {
+  background-color: #636363;
+  color: #ccc;
+}
 img {
   display: block;
 }
@@ -77,6 +88,25 @@ img {
   top: 45px;
   left: 45px;
   z-index: 1;
+}
+.operation {
+  border: 1px solid #636363;
+  position: relative;
+  padding: 30px 10px 20px;
+  margin: 10px 0;
+}
+.operation h2 {
+  position: absolute;
+  left: 20px;
+  top: -10px;
+  background-color: #fff;
+  padding: 0 5px;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #636363;
+}
+.operation input[type=submit] {
+  margin: 20px 0 0;
 }
 
 
