--- a/templates/fragments/photos.html
+++ b/templates/fragments/photos.html
@@ -6,7 +6,7 @@
     {% for filebrowse_file in filebrowse_files %}
       <div class="filebrowse-image{{ loop.cycle('', '', '', ' filebrowse-image-right') }}">
         <label for="filebrowse_image_{{ filebrowse_file.filename }}"><img src="{{ url_for('thumb', file=filebrowse_file.fullname, width=thumb_resize_width, height=thumb_resize_height, timestamp=timestamp) }}" width="{{ filebrowse_file.thumb_width }}" height="{{ filebrowse_file.thumb_height }}"{% if filebrowse_file.top_offset %} style="top: {{ filebrowse_file.top_offset }}px"{% endif %}{% if filebrowse_file.left_offset %} style="left: {{ filebrowse_file.left_offset }}px"{% endif %} /></label>
-        <input type="checkbox" id="filebrowse_image_{{ filebrowse_file.filename }}" value="{{ filebrowse_file.filename }}" name="filebrowse_files" checked="checked" class="filebrowse-checkbox" />
+        <input type="checkbox" id="filebrowse_image_{{ filebrowse_file.filename }}" value="{{ filebrowse_file.filename }}" name="filebrowse_files"{% if filebrowse_file.checked %} checked="checked"{% endif %} class="filebrowse-checkbox" />
       </div><!-- /.filebrowse-image -->
     {% endfor %}
     
