--- a/templates/home.html
+++ b/templates/home.html
@@ -32,6 +32,12 @@
     <div class="operation-progress" id="operation-reorient-progress"></div>
     <input type="submit" value="Fix orientation" id="operation-reorient" />
   </div><!-- /#operation -->
+  
+  <div class="operation">
+    <h2>Fix date modified</h2>
+    <div class="operation-progress" id="operation-datemodified-progress"></div>
+    <input type="submit" value="Fix date modified" id="operation-datemodified" />
+  </div><!-- /#operation -->
 </div><!-- /#operations -->
 </form>
 
