exposed shiftdate on the front-end: required adding a simple generic system for passing 'extra args' between front- and back-end.

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,14 @@
   </div><!-- /#operation -->
   
   <div class="operation">
+    <h2>Shift date taken</h2>
+    <div class="operation-progress" id="operation-shiftdate-progress"></div>
+    <label for="operation-shiftdate-offset">Shift date by:</label>
+    <input type="text" id="operation-shiftdate-offset" />
+    <input type="submit" value="Shift date taken" id="operation-shiftdate" />
+  </div><!-- /#operation -->
+  
+  <div class="operation">
     <h2>Fix date modified</h2>
     <div class="operation-progress" id="operation-datemodified-progress"></div>
     <input type="submit" value="Fix date modified" id="operation-datemodified" />
