--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -25,6 +25,7 @@ label {
 input[type=text] {
   border: 1px solid #636363;
   padding: 5px;
+  display: block;
 }
 input[type=submit] {
   padding: 10px;
@@ -123,6 +124,14 @@ img {
   text-transform: uppercase;
   font-size: 16px;
   color: #636363;
+}
+.operation label {
+  margin: 10px 0 0;
+}
+.operation input[type=text] {
+  border: 1px solid #aaa;
+  margin: 10px 0 0;
+  width: 97.5%;
 }
 .operation input[type=submit] {
   margin: 20px 0 0;
