--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -89,15 +89,12 @@ img {
   border: 1px solid #636363;
 }
 .filebrowse-image {
-  width: 100px;
+  width: 100%;
   height: 100px;
   float: left;
   margin-right: 10px;
   margin-bottom: 10px;
   position: relative;
-}
-.filebrowse-image-right {
-  margin-right: 0;
 }
 .filebrowse-image img {
   position: absolute;
@@ -107,6 +104,11 @@ img {
   top: 45px;
   left: 45px;
   z-index: 1;
+}
+.filebrowse-meta {
+  position: absolute;
+  width: 328px;
+  left: 110px;
 }
 .operation {
   border: 1px solid #636363;
@@ -146,4 +148,12 @@ img {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+
+
+/* Misc */
+
+.error {
+  color: #f00;
 }
